version/0.5/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for PyWorkbench.

.. vale off

.. towncrier release notes start

`0.5.0 <https://github.com/ansys/pyworkbench/releases/tag/v0.5.0>`_ - 2024-08-15
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.4.0 `#87 <https://github.com/ansys/pyworkbench/pull/87>`_


Fixed
^^^^^

- docs: update docs links and `check-swicher` `#89 <https://github.com/ansys/pyworkbench/pull/89>`_
- fix: make `WMI` windows only dependency `#105 <https://github.com/ansys/pyworkbench/pull/105>`_


Dependencies
^^^^^^^^^^^^

- chore: bump ansys-sphinx-theme[autoapi] from 0.16.5 to 0.16.6 `#94 <https://github.com/ansys/pyworkbench/pull/94>`_
- chore: bump sphinx-autodoc-typehints from 2.1.1 to 2.2.0 `#95 <https://github.com/ansys/pyworkbench/pull/95>`_
- chore: bump safety from 3.2.3 to 3.2.4 `#98 <https://github.com/ansys/pyworkbench/pull/98>`_


Miscellaneous
^^^^^^^^^^^^^

- fix some doc mistakes `#91 <https://github.com/ansys/pyworkbench/pull/91>`_

`0.4.0 <https://github.com/ansys/pyworkbench/releases/tag/v0.4.0>`_ - 2024-06-12
================================================================================

Added
^^^^^

- tests: add the basic units tests `#79 <https://github.com/ansys/pyworkbench/pull/79>`_


Changed
^^^^^^^

- ci: update the release workflow to trusted publishers `#71 <https://github.com/ansys/pyworkbench/pull/71>`_


Fixed
^^^^^

- fix: update ``ci-cd`` and repo url `#68 <https://github.com/ansys/pyworkbench/pull/68>`_
- docs: improve docstring and api reference `#69 <https://github.com/ansys/pyworkbench/pull/69>`_


Dependencies
^^^^^^^^^^^^

- doc: update documentation to match PyAnsys standards `#63 <https://github.com/ansys/pyworkbench/pull/63>`_
- docs: update the common pyansys documents `#64 <https://github.com/ansys/pyworkbench/pull/64>`_
- MAINT: bump ansys-sphinx-theme[autoapi] from 0.16.4 to 0.16.5 `#73 <https://github.com/ansys/pyworkbench/pull/73>`_
- MAINT: bump sphinx-autodoc-typehints from 2.1.0 to 2.1.1 `#75 <https://github.com/ansys/pyworkbench/pull/75>`_
- chore: bump safety from 3.2.0 to 3.2.1 `#77 <https://github.com/ansys/pyworkbench/pull/77>`_
- chore: bump pytest from 8.2.1 to 8.2.2 `#82 <https://github.com/ansys/pyworkbench/pull/82>`_
- chore: bump safety from 3.2.1 to 3.2.3 `#84 <https://github.com/ansys/pyworkbench/pull/84>`_
- chore: update api version `#86 <https://github.com/ansys/pyworkbench/pull/86>`_


Miscellaneous
^^^^^^^^^^^^^

- feat: adding API for connecting to a running server `#80 <https://github.com/ansys/pyworkbench/pull/80>`_
- doc: technical review `#81 <https://github.com/ansys/pyworkbench/pull/81>`_
- Overall review based on skimming the doc `#83 <https://github.com/ansys/pyworkbench/pull/83>`_

.. vale on
